# maven_weekly

./: .gitignore  Dockerfile  Dockerrun.aws.json  ProcFile  Procfile  api  api.cabal  mavenweekly  mavenweekly.cabal  site_key.txt  stuff
snaplets/heist/templates/: _login.tpl  add_link_success.tpl  base.tpl  link_form.tpl  missing_params.tpl
snaplets/persist/: devel.cfg
src/: Application.hs  PersistentHelpers.hs  Schema.hs  Site.hs  StringHelpers.hs
src/DB/: Settings.hs
src/Handlers/: Authentication.hs  Filters.hs  Links.hs  Users.hs
src/Queries/: Group.hs
src/handlers/: Filters.hs  Links.hs
src/jobs/: SendEmail.hs
src/lib/: SendGrid.hs
src/queries/: Group.hs
