Name:                mavenweekly
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          jvannem@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Library
-- I'm not entirely sure why I have to do this
-- But if i don't i get a bizarre error during the linking
  exposed-modules: 
    Schema
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs: src
  default-language:    Haskell2010

Executable send_email
  hs-source-dirs: src, src/jobs, src/lib, src/queries
  main-is: SendEmail.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.6,
    base                      >= 4.4      && < 5,
    persistent                >= 2.0    && < 2.2,
    snaplet-persistent        >= 0.5    && < 0.6,
    esqueleto                 >= 2.4.0 && < 3.0.0,
    wreq                      >= 0.4.0 && < 1.0.0,
    attoparsec                >= 0.11.1.0 && < 1.0.0,
    aeson                     >= 0.7.0.1 && < 1.0,
    persistent-postgresql     >= 2.1.0 && < 2.3.0, 
    monad-control             >= 1.0.0 && < 1.2.0 ,
    monad-logger              >= 0.3.13.2 && < 0.4.0

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
Executable mavenweekly
  hs-source-dirs: src, src/queries
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.15,
    transformers              >= 0.3.0.0 && < 0.4.0.0,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.6,
    xmlhtml                   >= 0.1     && < 0.3,
    base                      >= 4.4     && < 5,
    hashmap                   >= 1.3.0   && < 1.4.0,
    lens                      >= 3.7.6   && < 4.12, 
    snaplet-persistent        >= 0.5     && < 0.6,
    persistent                >= 2.0     && < 2.2,
    persistent-template,
    time,
    web-routes-th,
    path-pieces,
    web-routes                >= 0.27.9 && < 0.27.10,
    monadplus                 >= 1.4.2 && < 1.5.0,
    heist                     >= 0.14.1.1 && < 0.14.2,
    esqueleto                 >= 2.4.0 && < 3.0.0

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
